--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "newbook",
+  "name": "book-api",
   "version": "1.0.0",
   "description": "Simple book api",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "dependencies":{
-    "express":"*",
-    "body-parser":"*",
-    "mongoose":"*",
-    "nodemon":"*"
+  "dependencies": {
+    "body-parser": "*",
+    "cors": "^2.8.1",
+    "express": "*",
+    "mongoose": "*",
+    "nodemon": "*"
   },
   "author": "Pratik Lalani",
   "license": "ISC"
